Notebook to perform some sentiment analysis

--- a/Twitter_API.ipynb
+++ b/Twitter_API.ipynb
@@ -40,12 +40,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "consumer_key = 'dwByEEDyBOP4vp8DXkfd1XpS8'\n",
-    "consumer_secret = 'KSzoDyy8Ak9sIu3k8PF563E3fQGP0Vt0Gdq7cRUCafI3Aeug74'\n",
-    "access_token = '1092518855522639874-dbdL5MOE8GHfDGMW3iG1yBOcQiuED0'\n",
-    "access_token_secret = 'qCOvjjsb9ZtydV3BcaPLWBikLgRy25w6vOWH8m7zT3EE2'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -92,7 +87,7 @@
     "numberOfTweets = 10\n",
     "for tweet in tweepy.Cursor(api.search, search).items(numberOfTweets):\n",
     "    try:\n",
-    "        tweet.user.follow()\n",
+    "        tweet.retweet()\n",
     "        print('Retweeted the tweet')\n",
     "    except tweepy.TweepError as e:\n",
     "        print(e.reason)\n",
