Updated Classes File

--- a/Classes_DELETE.ipynb
+++ b/Classes_DELETE.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "1.0123"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "1.07"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "2"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        " 'email': 'John.Doe@company.com'}"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "'70000'"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "True"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,16 +560,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Developer at 0x4c26af0>"
+       "<__main__.Developer at 0xe129b0>"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "55000"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "52000"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        " 'prog_lang': 'java'}"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
     "    def rem_employee(self, emp):\n",
     "        if emp  in self.employees:\n",
     "            self.employees.remove(emp)\n",
-    "            print(\"employee {} remved\".format(emp))\n",
+    "            print(\"employee {} removed\".format(emp))\n",
     "    \n",
     "    def print_employees(self):\n",
     "        for emp in self.employees:\n",
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,16 +745,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<__main__.Developer at 0xda1450>, 'Paul']"
+       "['Eric', 'Paul']"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,14 +765,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "employee Paul remved\n"
+      "employee Paul removed\n"
      ]
     }
    ],
@@ -782,19 +782,380 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Developer object at 0x00DA1450>\n"
+      "Eric\n"
      ]
     }
    ],
    "source": [
     "man_1.print_employees()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Special Methods\n",
+    "\n",
+    " - Implement behaviour "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Manager at 0x13f1a90>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "man_1  # It would be good if we good print out something with a little more detail than what is below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<__main__.Manager object at 0x013F1A90>'"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repr(man_1)  # "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employee:\n",
+    "\n",
+    "    # These are class variables\n",
+    "    num_emps = 0 # If we want to keep track of the number of employees. \n",
+    "    raise_amount = 1.04\n",
+    "    \n",
+    "    def __init__(self, first, last, pay): # convention is that we call these self\n",
+    "        # self is passed in and then \n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.pay = pay\n",
+    "        self.email = first + '.' + last + '@company.com'\n",
+    "        \n",
+    "        Employee.num_emps += 1\n",
+    "    \n",
+    "    def firstletter(self):\n",
+    "        f_letter=self.first[0]\n",
+    "        return f_letter\n",
+    "    \n",
+    "    def fullname(self):\n",
+    "        fullname = str(self.first+self.last)\n",
+    "        return fullname\n",
+    "    \n",
+    "    # we are going to create a method to apply a fuc\n",
+    "    def apply_raise(self):\n",
+    "        self.pay = int(self.pay * self.raise_amount)\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return \"Employee('{}','{}',{})\".format(self.first, self.last, self.pay)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return '{} - {}'.format(self.fullname(), self.email)\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return self.pay + other.pay\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.fullname())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee('David','Ryan',123444)\n",
+      "DavidRyan - David.Ryan@company.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr(emp_1))\n",
+    "print(str(emp_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee('David','Ryan',123444)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((emp_1.__repr__()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "say we wanted to add two employees together and combine their salaries..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emp_1 = Employee('David', 'Ryan', 123444)\n",
+    "emp_2 = Employee('Thomas', 'Jefferson', 444)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the following is a self __add__ ('dunder add) method. There is one of these for integers and one for strings\n",
+    "\n",
+    "We can use these to specify how employee objects are added. \n",
+    "\n",
+    "`    def __add__(self, other):\n",
+    "        return self.pay+other.pay`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123888\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(emp_1 + emp_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " We can check the other object arithmetic dunders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len('test'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('test'.__len__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str.__len__??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the following dunder to create a dunder method for the lenght of self (have added this above)\n",
+    "\n",
+    "`    def __len__(self):\n",
+    "        return len(self.fullname)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(emp_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Property decorators, getter, setter and deleters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, first, last):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "    \n",
+    "    @property\n",
+    "    def fullname(self):\n",
+    "        return '{} {}'.format(self.first, self.last)\n",
+    "    \n",
+    "    @property # by adding this we can access as if it were an attribute rather than a method (no parenthesis)\n",
+    "    def email(self):\n",
+    "        return '{}.{}@email.com'.format(self.first,self.last)\n",
+    "    \n",
+    "    # the following will allow us to set attributes after the object has been created\n",
+    "    @fullname.setter\n",
+    "    def fullname(self, name):\n",
+    "        first, last = name.split(' ')\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        \n",
+    "    @fullname.deleter\n",
+    "    def fullname(self):\n",
+    "        print('Delete Name!')\n",
+    "        self.first = None\n",
+    "        self.last = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, even though we have changed the first name the email stays the same. So what if we want to update this automatically. We could include the property method above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emp_1 = Employee('John', 'Smith')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emp_1.fullname= 'Corey Schafer'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delete Name!\n"
+     ]
+    }
+   ],
+   "source": [
+    "del emp_1.fullname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first': None, 'last': None}"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emp_1.__dict__"
    ]
   },
   {
